--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,7 @@ flask-sqlalchemy==2.4.1
 sqlalchemy
 flask-login==0.4.1
 mysqlclient==1.4.6
+gunicorn==20.0.4
+redis==3.3.11
+gevent==1.4.0
+flask-sse==0.2.1
