--- a/.dockerignore
+++ b/.dockerignore
@@ -8,7 +8,7 @@ Dockerfile
 ########################
 # Customized Ignore
 ########################
-
+secrets/
 
 
 # https://github.com/github/gitignore/blob/master/Global/Windows.gitignore
